# doorlose

./: .gitignore  main.js  package.json  start_addon_vs2017_win64.bat  start_backend_vs2017_win64.bat  start_doorlose.bat  start_vs2017_win64.bat  test.js
addon/doorlose/: CMakeLists.txt
addon/doorlose/backend/: CMakeLists.txt  backend.cpp  backend.js  package.json
addon/doorlose/database/: CMakeLists.txt
addon/doorlose/database/include/doorlose/database/detail/: bitset.hpp  choise_base.hpp
addon/doorlose/database/src/detail/: task_base.cpp
addon/doorlose/database/test/: database_test.cpp
addon/doorlose/database/test/detail/: choise_base_test.cpp  task_base_test.cpp
addon/doorlose/experiments/: CMakeLists.txt  main.cpp
backend/: CMakeLists.txt  backend.cpp  package.json
backend/addon/: CMakeLists.txt
backend/addon/database/: CMakeLists.txt
backend/addon/database/include/addon/: database.hpp
backend/addon/database/include/addon/database/: api.hpp  database.hpp  types.hpp
backend/addon/database/include/addon/database/detail/: bitset.hpp  choise_base.hpp  common.hpp  task_base.hpp  utils.hpp
backend/addon/database/src/: api.cpp  database.cpp
backend/addon/database/src/detail/: bitset.cpp  choise_base.cpp  task_base.cpp  utils.cpp
backend/addon/database/test/: database_test.cpp
backend/addon/database/test/detail/: bitset_test.cpp  choise_base_test.cpp  task_base_test.cpp
backend/addon/experiments/: CMakeLists.txt
doorlose/: CMakeLists.txt
doorlose/backend/: CMakeLists.txt  main.cpp
doorlose/database/: CMakeLists.txt
doorlose/database/include/: task_base.hpp
doorlose/database/include/doorlose/: database.hpp
doorlose/database/include/doorlose/database/: common.hpp  database.hpp  task_base.hpp
doorlose/database/include/doorlose/database/detail/: choise_base.hpp  task_base.hpp
doorlose/database/src/: task_base.cpp
doorlose/database/src/detail/: bitset.cpp  choise_base.cpp
doorlose/database/test/: task_base_test.cpp
doorlose/database/test/detail/: bitset_test.cpp  choise_base_test.cpp  task_base_test.cpp
